material/Lab4/mylibapp-nodeportservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylibertyapp-nodeport
spec:
  type: NodePort
  selector:
    app: mylibertyapp
  ports:
   - protocol: TCP
     port: 9080
     targetPort: 9080
     nodePort: 30180
